# rwai_fastapi

./: .env  .env.example  AI聊天组件UI设计文档.md  API_DOCUMENTATION.md  API可视化界面架构设计.md  RAG_MODULE_USAGE.md  README.md  ai_backend_dev_doc.md  ai_backend_development_plan.md  demo_document.md  docker-compose.yml  fetch_outline.py  fetch_outline2.py  final_md2mindmap.ipynb  prompts_documentation.md  pyproject.toml  rag_api_documentation.md  requirements.txt  test_chat_implementation.py  test_rag_demo.py  前后端分离使用说明.md
.augment/rules/: project_global_rules.md
.superdesign/design_iterations/: ai_chat_component_1.html  ai_chat_component_2.html  ai_chat_component_3.html  ai_chat_component_4.html  chat_theme.css  cyber_chat_1.html  cyber_chat_1_1.html  cyber_chat_1_2.html  (+3 more)
app/: __init__.py  main.py
dev_docs/: API_v2_文档.md  LlamaIndex_ChatEngine_Modes_Comparison.md  LlamaIndex_ChatEngines_SharedMemory_Tutorial.ipynb  RAG_Module_Development_Plan.md  Unified_Course_Material_Processing_API_Design.md  indexedDB_ChatBuffer_MVP_Plan.md  llama_index_shared_memory_redis_storage.ipynb  下一步操作指南.md  前端API更新报告.md  性能测试报告.md  智能聊天系统开发文档.md  课程删除API重构计划.md  迁移指南.md  部署文档.md  重构完成报告.md  重构计划.md  重构进度报告.md
frontend/: RAG_CHAT_REWRITE.md  README.md  index.html  test-api.html  test-id-fix.html  test-rag-chat.html
scripts/: build_rag_index.py  rag_data_manager.py
tests/: test_api_v2_integration.py  test_end_to_end.py  test_outline.py  test_rag.py  test_rag_services_integration.py  test_rag_settings.py
try_fetch/: api_response.json  outline_0001_000001.md  outline_0001_000002.md
(+67 files in other folders)
